# unpin

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  TODO  build.rs  flake.nix  result  test_complete.rs  test_malformed_hardlink.tar  unpin.1
.github/: smoke-scenario.sh
.github/workflows/: release.yml  smoke.yml  unpin.yml
assets/: github-roots.pem
demo/: .gitignore  Makefile  demo.cast  demo.py
src/: aliases.rs  archive.rs  bundle.rs  config.rs  ctx.rs  dns.rs  github.rs  help.rs  http.rs  install.rs  main.rs  man.rs  meta.rs  panic.rs  platform.rs  progress.rs  readurl.rs  setup.rs  sigint.rs
src/install/: asset.rs  job.rs  linker.rs  mod.rs  pipeline.rs  prompt.rs  spec.rs
src/render/: man.rs  mod.rs  readme.rs
src/testdata/: man.zdict  man_page.1  man_page.1.zst
