[package]
name = "unpin"
version = "0.2.0"
edition = "2024"
description = "Install single-binary CLI tools straight from GitHub releases — no root, no distro, no dependencies."
license = "MIT"
repository = "https://github.com/unpins/unpin"
homepage = "https://unpins.org"

[[bin]]
name = "unpin"
path = "src/main.rs"

[dependencies]
minreq = { version = "2", default-features = false, features = ["https-rustls"] }
clap = { version = "4", default-features = false, features = ["std", "derive", "help", "usage", "error-context", "suggestions"] }
clap_complete = { version = "4", default-features = false }
nanoserde = { version = "0.2", default-features = false, features = ["json", "std"] }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
xz2 = { version = "0.1", features = ["static"] }
ruzstd = { version = "0.7", default-features = false, features = ["std"] }
tar = { version = "0.4", default-features = false }
zip = { version = "2", default-features = false, features = ["flate2", "deflate-flate2"] }
sha2 = { version = "0.10", default-features = false }
ctrlc = { version = "3", default-features = false }
indicatif = { version = "0.18", default-features = false }
console = { version = "0.16", default-features = false }

[dev-dependencies]
tempfile = "3"
zstd = { version = "0.13", default-features = false }

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
strip = true
panic = "abort"
